<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login.view.LoginActivity"
        android:background="@color/blue">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center"
                  android:layout_marginTop="96dp">
        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_question_answer_black_24dp"/>
        <TextView
                style="@style/font_roboto_bold_64_sp_whit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:padding="@dimen/dimen_8_dp"/>
    </LinearLayout>


    <EditText style="@style/editText_style"
              android:layout_width="match_parent"
              android:layout_height="48dp"
              android:id="@+id/activity_login_email_et"
              android:layout_margin="16dp"
              android:gravity="center_vertical|left"
              android:hint="@string/email_hint_text"
              android:paddingLeft="8dp"
              android:inputType="textEmailAddress"
              android:layout_centerInParent="true"/>

    <EditText style="@style/editText_style"
              android:layout_width="match_parent"
              android:layout_height="48dp"
              android:id="@+id/activity_login_password_et"
              android:layout_margin="16dp"
              android:gravity="center_vertical|left"
              android:hint="@string/password_hint_text"
              android:paddingLeft="8dp"
              android:inputType="textPassword"
              android:layout_below="@+id/activity_login_email_et"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/activity_login_password_et"
            android:gravity="center_horizontal">
        <TextView
                style="@style/font_roboto_bold_16_sp_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_user_text"
        />

        <Button
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity_login_register_btn"
                android:padding="12dp"
                android:layout_marginStart="@dimen/dimen_8_dp"
                android:text="@string/register_text"/>

    </LinearLayout>
    <Button
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/activity_login_btn"
            android:text="@string/login_text"
            android:layout_margin="16dp"
            android:layout_alignParentBottom="true"
            />

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#99000000"
                    android:id="@+id/activity_login_progress_bar_layout"
                    android:visibility="gone">

        <ProgressBar android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"/>
    </RelativeLayout>

</RelativeLayout>