<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login.view.RegisterActivity"
        android:background="@color/blue">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:fitsSystemWindows="true"
            app:elevation="0dp"
            android:id="@+id/appBar">

        <androidx.appcompat.widget.Toolbar android:theme="@style/toolbar_style"
                                           android:layout_width="match_parent"
                                           android:layout_height="wrap_content"
                                           app:elevation="0dp"
                                           android:id= "@+id/toolbar"
                                           android:focusable="true"
                                           android:focusableInTouchMode="true"/>


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center"
                  android:layout_below="@+id/appBar"
                    android:layout_marginTop="@dimen/dimen_24_dp">
        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_question_answer_black_24dp"/>
        <TextView
                style="@style/font_roboto_bold_64_sp_whit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:padding="@dimen/dimen_8_dp"/>
    </LinearLayout>

    <EditText style="@style/editText_style"
              android:layout_width="match_parent"
              android:layout_height="48dp"
              android:id="@+id/activity_register_email_et"
              android:layout_margin="16dp"
              android:gravity="center_vertical|left"
              android:hint="@string/email_hint_text"
              android:paddingLeft="8dp"
              android:inputType="textEmailAddress"
              android:layout_centerInParent="true"/>

    <EditText style="@style/editText_style"
              android:layout_width="match_parent"
              android:layout_height="48dp"
              android:id="@+id/activity_register_password_et"
              android:layout_margin="16dp"
              android:gravity="center_vertical|left"
              android:hint="@string/password_hint_text"
              android:paddingLeft="8dp"
              android:layout_below="@+id/activity_register_email_et"
              android:background="@drawable/edit_text_bg"
              />

    <EditText style="@style/editText_style"
              android:layout_width="match_parent"
              android:layout_height="48dp"
              android:id="@+id/activity_register_username_et"
              android:layout_margin="16dp"
              android:gravity="center_vertical|left"
              android:hint="@string/username_hint_text"
              android:paddingLeft="8dp"
              android:layout_below="@+id/activity_register_password_et"
              android:background="@drawable/edit_text_bg"
              android:inputType="text"/>


    <Button
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/activity_register_btn"
            android:text="@string/register_text"
            android:layout_margin="16dp"
            android:layout_alignParentBottom="true"/>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#99000000"
                    android:id="@+id/activity_register_progress_bar_layout"
                    android:visibility="gone">

        <ProgressBar android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"/>
    </RelativeLayout>

</RelativeLayout>